testing/tests/ui/macro-caller-with-callexpr.stderr
error: block is not defined for `caller`
 --> MacroCallerWithCallExpr.txt:3:12
       "()}}\n{% endmacro %}\n{{ testmacro() }}\n    "
  --> tests/ui/macro-caller-with-callexpr.rs:8:14
   |
8  |       source = r#"
   |  ______________^
9  | | {% macro testmacro() %}
10 | |     {{caller()}}
11 | | {% endmacro %}
12 | | {{ testmacro() }}
13 | |     "#,
   | |______^
